welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: '(' expected but identifier found.
  if isInRange(a, 10, 20) && isInRange(b, 10, 20){
     ^max1020:14: error: illegal start of simple expression
}
^